[package]
name = "vimwiki-markdown-rs"
version = "0.1.0"
authors = ["tfachmann <fachmanntj@gmail.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.7"
convert_case = "0.2"
chrono = "0.4"
regex = "1.3"
pathdiff = "0.2.0"
path-clean = "0.1.0"
directories = "2.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
toml = "0.5"
kuchiki = "0.8.1"
log = "0.4"
env_logger = "0.7"
